--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
   },
   "content_scripts": [
     {
-      "run_at": "document_start",
+      "run_at": "document_end",
       "matches": ["https://www.youtube.com/watch?*list=*"],
       "js": ["content-scripts.js"]
     }
