--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,8 +18,7 @@
     }
   ],
   "permissions": [
-    "webRequest",
-    "webRequestBlocking",
+    "tabs",
     "https://www.youtube.com/watch?*list=*"
   ],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
